se pusieron las meta description(seo)

--- a/pages/casas.html
+++ b/pages/casas.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="venta y alquileres de casas" />
+    <meta
+      name="keywords"
+      content="venta, casas, alquileres, precios, meta description, meta keywords"
+    />
+    <meta name="robots" content="index, follow" />
     <link rel="stylesheet" href="../css/styles.css" />
 
     <!--añadimos bootstrap-->
@@ -28,6 +34,7 @@
       </div>
     </header>
     <!--barra de navegacion-->
+
     <nav class="navbar">
       <a href="../index.html">Inicio</a>
       <a href="casas.html">Casas</a>
@@ -35,9 +42,10 @@
       <a href="contacto.html">Contacto</a>
       <a href="./nosotros.html">Nosotros</a>
     </nav>
+
     <!--cartas bootstrap-->
-    <div class="row row-cols-1 row-cols-md-2 g-4">
-      <div class="col">
+    <div class="principal">
+      <div>
         <div class="card">
           <img
             src="../imagenes/casas a la venta/fotos casas surtida/3364954466.jpg"
@@ -55,7 +63,7 @@
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="card-body">
         <div class="card">
           <img
             src="../imagenes/casas a la venta/quinta/3376995113.jpg"
