--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -3,8 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Desarrolos Inmobiliarios</title>
+
+    <meta name="description" content="venta y alquileres de casas" />
+    <meta
+      name="keywords"
+      content="venta, casas, alquileres, precios, meta description, meta keywords"
+    />
+    <meta name="robots" content="index, follow" />
+    <title>Desarrollos Inmobiliarios</title>
     <link rel="stylesheet" href="../css/styles.css" />
+    <link
+      rel="icon"
+      href="../imagenes/casas a la venta/fondo3.jpg"
+      type="image/x-icon"
+    />
   </head>
   <body class="nosotros">
     <header>
