--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="venta y alquileres de casas" />
+    <meta
+      name="keywords"
+      content="venta, casas, alquileres, precios, meta description, meta keywords"
+    />
+    <meta name="robots" content="index, follow" />
+    <link
+      rel="icon"
+      href="../imagenes/casas a la venta/fondo3.jpg"
+      type="image/x-icon"
+    />
     <title>Desarrollos Inmobiliarios</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
